import java.util.ArrayList;

public class MediaDB implements IDataIO
{

    @Override
    public void addUserData(User user)
    {

    }

    @Override
    public ArrayList<IMedia> getMediaData(String path, String type)
    {
        return null;
    }

    @Override
    public String getSingleUserData(String username)
    {
        return null;
    }

    @Override
    public ArrayList<String> readData(String path)
    {
        return null;
    }

    @Override
    public void writeUserData(User user)
    {

    }
}
