@startuml
!pragma layout smetana

interface IMedia {
    + {abstract} String getName()
    + {abstract} String getPublishingYear()
    + {abstract} Arraylist<String> getCategories()
    + {abstract} float getRating()
    + {abstract} void play()
    + {abstract} void pause()
}
abstract class AMedia implements IMedia {
    + String name
    + String publishingYear
    + Arraylist<String> categories
    + float rating
    + AMedia(String name, String publishingYear, Arraylist<String> categories, float rating)
    + void pause()
}
class Movie extends AMedia {
    + Movie(String name, String publishingYear, Arraylist<String> categories, float rating)
    + void play()
}
class Series extends AMedia {
    - int seasons
    - int episodes
    + Series(String name, String publishingYear, Arraylist<String> categories, float rating, int seasons, int episodes)
    + void play()
    + int getSeasons()
    + int getEpisodes()
}
class User {
    - String username
    - String password
    - ArrayList<IMedia> watchedMedia
    - ArrayList<IMedia> savedMedia
    + User(String username, String password)
    + ArrayList<IMedia> getWatchedMedia()
    + ArrayList<IMedia> getSavedMedia()
    + String getUsername()
    + String getPassword()
    + ArrayList<IMedia> addToWatchedMedia(IMedia media)
    + ArrayList<IMedia> addToSavedMedia(IMedia media)
}
class StartMenu {
    - String currentUsername
    - String currentPassword
    + User signUp()
    + User logIn()
    - boolean existingUsername(String username)
    - boolean correctPassword(String password)
}
class MainMenu {
    + IMedia Search(String mediaName)
    + Arraylist<IMedia> searchCategory(String category)
    + Arraylist<IMedia> getUsersWatchedMedia(User user)
    + Arraylist<IMedia> getUsersSavedMedia(User user)
}

class TextUI {
    + {static} Scanner scn
    + {static} void displayMessage(String msg)
    + {static} String getInput()
    + {static} void clearConsole()
}

interface IDataIO {
    + {abstract} void addUserData(User user)
    + {abstract} ArrayList<IMedia> getMediaData (String path, String type)
    + {abstract} String getSingleUserData (String username)
    + {abstract} ArrayList<String> readData(String path)
    + {abstract} void writeUserData (User user)
}

class FileIO implements IDataIO{
    + void addUserData(User user)
    + ArrayList<IMedia> getMediaData (String path, String type)
    + String getSingleUserData (String username)
    + ArrayList<String> readData(String path)
    + void writeUserData (User user)
    + String createUserDataString(User user)
}

class MediaDB implements IDataIO {
    + void addUserData(User user)
    + ArrayList<IMedia> getMediaData (String path, String type)
    + String getSingleUserData (String username)
    + ArrayList<String> readData(String path)
    + void writeUserData (User user)
}

class Main {
    + {static} void main(String[] args)
}

class Application {
    - User currentUser
    - StartMenu startMenu
    - MainMenu mainMenu
    + {static} ArrayList<IMedia> Movies
    + {static} ArrayList<IMedia> Series
    + Stream()
    + void run()
    + void watch(IMedia media)
    - ArrayList<IMedia> getMediaData(String fileName)
}

Main *-- Application

Application *-- StartMenu
Application *-- MainMenu
Application *-- User
Application *-- IDataIO
MainMenu *-- IMedia
User *-- IMedia

@enduml